Modify FindCommand to handle student and tutors
Also fixed most checkstyle errors in all the files.